Avoid infinite recursion when cursor theme inherits itself

Keep track of the themes we have seen and break when we see one again

BUG: 457926